--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,53 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+
+body {
+    margin: 0;
+    font-family: 'Lato', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    margin: 0;
+  }
+  ul,
+  ol {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+
+//   GENERAL CLASSES
+  .list {
+    list-style: none;
+    padding: 0;
+  }
+
+  .link {
+    text-decoration: none;
+    color: currentColor;
+  }
+
+  .container {
+    max-width: 320px;
+    padding: 30px 20px;
+    margin: 0 auto;
+    border: 1px solid #11d;
+  }
