--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,18 +27,18 @@
 
                     <li><button class="top-city-btn">Warsaw</button></li>
 
-                    <li><button class="top-city-btn">&gt;</button></li>
+                    <li><button class="more-cities-btn">&gt;</button></li>
                 </ul>
 
             </div>
 
             <div class="city-weather-div">
-                <svg width="20" height="20">
+                <svg class="cloudy-icon"width="20" height="20">
                     <use href="./images/icons.svg#icon-cloudy"></use> 
                 </svg>
 
-                <p>Kyiv, UA</p>
-                <h1>-3</h1>
+                <p class="city">Kyiv, UA</p>
+                <h1 class="temp">-3</h1>
                 <ul class="minmax-div">
                     <li class="min">
                         <div>
@@ -47,7 +47,7 @@
                         </div>
                     </li>
 
-                    <li class="min">
+                    <li class="max">
                         <div>
                             <p>max</p>
                             <p>1°</p>
@@ -62,7 +62,7 @@
                 </div>
             </div>
 
-            <p>
+            <p class="sayings" >
                 Who cares about the clouds when<br>we're together? Just sing a song<br>and bring the sunny weather. 
                 <br>
                 <br>Dale Evans
