--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,7 +27,11 @@
 
                     <li><button class="top-city-btn">Warsaw</button></li>
 
-                    <li><button class="more-cities-btn">&gt;</button></li>
+                    <li><button class="more-cities-btn">
+                        <svg class="arrow-right-icon" width="15" height="15">
+                            <use href="./images/icons.svg#right-arrow-svgrepo"></use>
+                        </svg>
+                    </button></li>
                 </ul>
 
             </div>
