--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -14,3 +14,10 @@
     outline: none;
 }
 
+body{
+    
+    background-image: url(../images/bg-img-body.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
