--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -47,7 +47,8 @@ body {
 
   .container {
     max-width: 320px;
-    padding: 30px 20px;
+    // padding: 30px 20px;
+    padding: 20px;
     margin: 0 auto;
     border: 1px solid #11d;
   }
