--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,7 @@
-<main>    
-    <div class="city-weather-div">
+<main>
+    <section >  
+    <div class="container">
+        <div class="city-weather-div">
         <svg class="cloudy-icon"width="20" height="20">
             <use href="./images/icons.svg#icon-cloudy"></use> 
         </svg>
@@ -22,51 +24,60 @@
                     <p>1°</p>
                 </div>
             </li>
-        </ul>           
-    </div>           
+        </ul></div>          
+    </div>  
+    </section>         
 
-    <div class="buttons-div">
-        <buttons class="btn-item ">TODAY</buttons> 
+    <section >
+    <div class="container">
+        <div class="buttons-div">
+            <buttons class="btn-item ">TODAY</buttons> 
 
-        <buttons class="btn-item">5 DAYS</buttons>
+            <buttons class="btn-item">5 DAYS</buttons>
+        </div>    
     </div>
+    </section>
 
-    <div class="calendar-div">
-        <h1>8th Sat</h1>
+    <section >
+    <div class="container">
+        <div class="calendar-div">
+            <h2 class="date-day">8<sup>th</sup>&nbsp; Sat</h2>
         <ul class="calendar-space">
             <li style="display: flex;">
-                <p>February&nbsp;</p>
-                <p>&nbsp;| &nbsp; 21:30:56&nbsp;</p>
-            </li>
-
+                <span>February&nbsp;</span>|&nbsp;<span>21:30:56&nbsp;</span></li>
+                
             <li style="display: flex;">
                 <i>
                     <svg class="sunrise-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-sunrise"></use> 
                     </svg>
                 </i>
+                <span>&nbsp;07:04&nbsp;|&nbsp;</span>
 
-                <p>&nbsp;07:04&nbsp; |&nbsp;</p>
                 <i>
                     <svg class="sunset-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-sunset"></use> 
                     </svg>
                 </i>
-                <p>&nbsp;17:05</p>
+                <span>&nbsp;17:05</span>
             </li>
-                
-                
-    
         </ul>
-    </div>
+        </div>    
+    </div></section>
     
-    <div class="sayingsdiv">
-    <p class="sayings" >
-        Who cares about the clouds when we're<br>together? Just sing a songand bring the<br>sunny weather. 
-                <br>
-                <br></p>
-    <p class="daleevans">Dale Evans</p>
+    <article>
+        <div class="container">
+            <div class="sayingsdiv">
+                <p class="sayings">Who cares about the clouds when we're<br>together? Just sing a song and bring the<br>sunny weather. 
+                    <br>
+                    <br></p>
+                <p class="daleevans">Dale Evans</p>
+            </div>
+        </div>
+    </article> 
+        
     
-    </div>
+
+    
     
 </main>
