--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,7 +8,7 @@
     stroke: black;
     fill: white;
     position: absolute;
-    top: 29%;
+    top: 28%;
     left: 4%
 }
 //.search{}
@@ -17,7 +17,7 @@
     fill: white;
     stroke: red;
     position: absolute;
-    top: 28%;
+    top: 27%;
     right: 6%;
 }
 
@@ -31,17 +31,32 @@
     margin-top: 10px;
 }
 
+.kiev{
+    display: flex;
+    position: relative;
+    justify-content: flex-start;
+    align-items: start;
+}
+
 .top-city-btn{
+    display: flex;
     background-color: yellow;
     cursor: pointer;
-    // font-size: 12px;
+    font-size: 12px;
     width: 74px;
     height: 28px;
     padding: 0 12px 0 12px;
+    align-items: center;
+    justify-content: center;
     border: 1px solid dimgray;
     border-radius: 20px;
     // text-decoration: underline;
     text-decoration: underline;
+}
+
+.vectorx{
+    stroke: black;
+    position: absolute;
 }
 
 // .top-cities-list.li{
@@ -53,11 +68,11 @@
     background-color: yellow;
     align-items: center;
     justify-content: center;
-    border-radius: 20%;
+    border-radius: 50%;
     border: 1px solid dimgray;
     width: 28px;
-    height: 20px;
+    height: 28px;
     cursor: pointer;
-    margin-left: 108px;
+    margin-left: 80px;
 }
 
