--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,26 +3,27 @@
         <div class="city-input-container">
 
         
-            <i class="location-icon">
+            <button class="location-icon">
                 <svg class="icon-location" width="20" height="20">
                     <use href="./images/icons.svg#icon-location"></use>
                 </svg>
-            </i>
+            </button>
             <input type="text" name="search" id="search" class="search" placeholder="Enter the city">
 
-            <div>
-                <i>
+            
+                <button class="star-button">
                     <svg class="star-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-star-1"></use> 
                         </svg>  
-                </i>
+                </button>
             </div>
-            <p id="city"></p>
+
+            <!-- <p id="city"></p> -->
             <div class="top-cities-div">
                 <ul class="top-cities-list">
                     <li class="kiev"><span><a class="top-city-btn">Kyiv</a></span>
                     
-                        <span></span><svg class="vectorx" width="10" height="10">
+                        <span class="iconx"><svg class="vectorx" width="10" height="10">
                             <use href="./images/icons.svg#vector-x"></use> 
                         </svg></span>
                     </li>
