icons, frame2 etc

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -31,7 +31,8 @@
     <section >
     <div class="container">
         <div class="buttons-div">
-            <buttons class="btn-item ">TODAY</buttons> 
+            <buttons class="btn-item">
+                TODAY</buttons> 
 
             <buttons class="btn-item">5 DAYS</buttons>
         </div>    
