--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,14 +21,18 @@
             <!-- <p id="city"></p> -->
             <div class="top-cities-div">
                 <ul class="top-cities-list">
-                    <li class="kiev"><span><a class="top-city-btn">Kyiv</a></span>
+                    <li class="kiev"><a class="top-city-btn">Kyiv🇺🇦</a>
                     
-                        <span class="iconx"><svg class="vectorx" width="10" height="10">
+                        <svg class="vectorx" width="10" height="10">
                             <use href="./images/icons.svg#vector-x"></use> 
-                        </svg></span>
+                        </svg>
                     </li>
                     
-                    <li><a class="top-city-btn">Paris</a></li>
+                    <li class="paris"><a class="top-city-btn">Paris🇫🇷</a>
+                        <svg class="vectorx" width="10" height="10">
+                            <use href="./images/icons.svg#vector-x"></use>
+                        </svg>
+                    </li>
                     
                     <!-- <li><a class="top-city-btn">Vinnytsya</a></li>
 
