--- a/src/partials/weatherdetails.html
+++ b/src/partials/weatherdetails.html
@@ -8,16 +8,17 @@
 
     <div class="fivedaysdiv">
         <h3 class="citylabel">Kyiv, UA</h3>
-
+    
         <ul class="days">
             <li class="daysitem">
                 <p class="daytext">Sunday</p>
                 <p class="daymonth">09 Feb</p>
                 <div>
-                    <svg class="cloudy" width="35" height="35">
+                    <svg class="cloudy" width="30" height="30">
                         <use href="./images/icons.svg#icon-cloudy"></use>
                     </svg>
                 </div>
+    
                 <ul class="minmax-list">
                     <li class="min">
                         <div>
@@ -25,25 +26,27 @@
                             <p class="tempdeg">-2°</p>
                         </div>
                     </li>
+    
                     <li class="max">
                         <div class="maxdiv">
                             <p class="minmaxtext">max</p>
                             <p class="tempdeg">1°</p>
                         </div>
-                    </li>      
+                    </li>
                 </ul>
                 <a href="" class="moretext">more info</a>
+    
             </li>
-
+    
             <li class="daysitem">
                 <p class="daytext">Monday</p>
                 <p class="daymonth">10 Feb</p>
                 <div>
-                    <svg class="snow" width="35" height="35">
+                    <svg class="snow" width="30" height="30">
                         <use href="./images/icons.svg#icon-snow"></use>
                     </svg>
                 </div>
-                
+    
                 <ul class="minmax-list">
                     <li class="min">
                         <div>
@@ -51,7 +54,7 @@
                             <p class="tempdeg">-2°</p>
                         </div>
                     </li>
-                
+    
                     <li class="max">
                         <div class="maxdiv">
                             <p class="minmaxtext">max</p>
@@ -61,16 +64,16 @@
                 </ul>
                 <a href="" class="moretext">more info</a>
             </li>
-
+    
             <li class="daysitem">
                 <p class="daytext">Tuesday</p>
                 <p class="daymonth">11 Feb</p>
                 <div>
-                    <svg class="snow" width="35" height="35">
+                    <svg class="snow" width="30" height="30">
                         <use href="./images/icons.svg#icon-weather"></use>
                     </svg>
                 </div>
-                
+    
                 <ul class="minmax-list">
                     <li class="min">
                         <div>
@@ -78,7 +81,7 @@
                             <p class="tempdeg">-2°</p>
                         </div>
                     </li>
-                
+    
                     <li class="max">
                         <div class="maxdiv">
                             <p class="minmaxtext">max</p>
@@ -97,7 +100,7 @@
                         <use href="./images/icons.svg#icon-VectorL-2"></use>
                     </svg>
                 </li>
-        
+    
                 <li class="arrowitem">
                     <svg class="arrow" width="8" height="16">
                         <use href="./images/icons.svg#icon-VectorR-3"></use>
@@ -106,19 +109,82 @@
             </ul>
         </div>
 
-    </div>
+        <div class="detailsdiv">
+            <ul class="negativetemplist">
+                <li class="negativetemp">
+                    <p class="timetext">00:00</p>
+                    <svg class="cloudy" width="35" height="35">
+                            <use href="./images/icons.svg#icon-cloudy"></use>
+                        </svg>   
+                    <p class="temptext">-2°</p>
 
+                    <ul class="humbarwin">
+                        <li class="humbarwin-item">
+                            <svg width="20" height="20"><use href="./images/icons.svg#icon-barometer"></use></svg>
+
+                            <p>772 mm</p>
+                        </li>
+
+                        <li class="humbarwin-item">
+                            <svg width="20" height="20"><use href="./images/icons.svg#icon-humidity"></use></svg>
+                            <p>54%</p>
+
+                        </li>
+
+                        <li class="humbarwin-item">
+                            <svg width="20" height="20"><use href="./images/icons.svg#icon-wind"></use></svg>
+                            <p>3.7 m/s</p>
+                        </li>
+                    </ul> 
+                </li>
+
+                <li class="negativetemp">
+                    <p class="timetext">00:00</p>
+                    
+                    <svg class="cloudy" width="35" height="35">
+                        <use href="./images/icons.svg#icon-cloudy"></use>
+                    </svg>
+                    
+                    <p class="temptext">-5°</p>
+                    
+                    <ul class="humbarwin">
+                        <li class="humbarwin-item">
+                            <svg width="20" height="20">
+                                <use href="./images/icons.svg#icon-barometer"></use>
+                            </svg>
+                    
+                            <p>772 mm</p>
+                        </li>
+                    
+                        <li class="humbarwin-item">
+                            <svg width="20" height="20">
+                                <use href="./images/icons.svg#icon-humidity"></use>
+                            </svg>
+                            <p>54%</p>
+                    
+                        </li>
+                    
+                        <li class="humbarwin-item">
+                            <svg width="20" height="20">
+                                <use href="./images/icons.svg#icon-wind"></use>
+                            </svg>
+                            <p>3.7 m/s</p>
+                        </li>
+                    </ul>
+
+                </li>
+            </ul>
+        </div>
+    
+    </div>
+    
     <div class="showdiv">
         <p><a class="showtext" href="">Show Chart</a></p>
-
-        <svg  width="28" height="28">
-                <use href="./images/icons.svg#icon-arrowleftdown"></use>
-            </svg>
-
+    
+        <svg width="28" height="28">
+            <use href="./images/icons.svg#icon-arrowleftdown"></use>
+        </svg>
+    
     </div>
-
-    
-
-    
-</div> 
+</div>
 </section>
